--- a/index.html
+++ b/index.html
@@ -13,22 +13,20 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="style.css" />
-
         <title>Hello, world!</title>
     </head>
     <body>
         <div class="container-fluid">
-            <header class="row mb-3">
+            <header class="row mb-3 sticky-top">
                 <div class="top d-flex col-12 py-2 justify-content-sm-between">
                     <p class="col-lg-4 d-none d-lg-flex align-items-lg-end text-white">Fri, Apr 17, 2020</p>
                     <img class="img-fluid col-4 col-sm-4 col-md-2 col-lg-4 px-0 py-2" src="./img/newsweek-header-top.png" alt="">
                     <div class="buttons col-lg-4 col-8 col-md-10 px-0 d-flex justify-content-end align-items-center">
-                        <button class="btn font-weight-bold text-white py-0 px-0 py-sm-0 px-sm-3 px-md-1 px-sm-1 px-lg-2">SIGN IN</button>
+                        <button class="btn font-weight-bold text-white py-0 pl-0 pr-2 py-sm-0 px-sm-3 px-md-1 px-sm-1 px-lg-2">SIGN IN</button>
                         <button class="btn font-weight-bold rounded-0 p-0 py-sm-0 px-sm-1 py-md-0 px-md-2 py-lg-1 subscribe-btn">SUBSCRIBE ></button>
                         <img class="d-lg-none ml-3 d-md-inline-block d-sm-inline-block d-inline-block" src="./img/iconmonstr-menu-1-32.png" alt="">
                     </div>
                 </div>
-
                 <nav class="col-12 d-none d-lg-block d-md-none d-sm-none">
                     <ul class="nav navbar navbar-nav flex-lg-row">
                         <li class="border-left pl-4 h5 mb-0 font-weight-bold">U.S.</li>
