--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <div class="container-fluid">
-            <header class="row mb-3 sticky-top">
+            <header class="row mb-3">
                 <div class="top d-flex col-12 py-2 justify-content-sm-between">
                     <p class="col-lg-4 d-none d-lg-flex align-items-lg-end text-white">Fri, Apr 17, 2020</p>
                     <img class="img-fluid col-4 col-sm-4 col-md-2 col-lg-4 px-0 py-2" src="./img/newsweek-header-top.png" alt="">
